# loxpp

./: CMakeLists.txt  README.md  script.lox
src/: Lox.cpp  Lox.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  main.cpp
